--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
         <item>User2</item>
     </string-array>
     <string name="button_login">Login</string>
+    <string name="sold_out">已售出</string>
+    <string name="selling">銷售中</string>
+    <string name="buyer_button">購買</string>
+    <string name="seller_button_sold">賣出</string>
+    <string name="seller_button_reject">拒絕</string>
 </resources>
